[gd_scene load_steps=12 format=3 uid="uid://cjdtl6ek4qp7d"]

[ext_resource type="Script" path="res://addons/wyvernbox/ground/ground_item_stack_view_2d.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://pueodad43okn" path="res://addons/wyvernbox/ground/ground_item_label.tscn" id="4"]

[sub_resource type="Gradient" id="12"]
interpolation_mode = 2
offsets = PackedFloat32Array(0.457143, 0.608163, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0.609023, 0.443137, 0.443137, 0.513726, 0)

[sub_resource type="GradientTexture2D" id="2"]
gradient = SubResource("12")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.5, 1)

[sub_resource type="GradientTexture2D" id="8"]
gradient = SubResource("12")
fill_from = Vector2(0, 1)
fill_to = Vector2(0, 0)

[sub_resource type="Gradient" id="13"]
interpolation_mode = 2
offsets = PackedFloat32Array(0.861224, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="6"]
gradient = SubResource("13")
width = 16
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.5, 1)

[sub_resource type="CircleShape2D" id="3"]
radius = 5.0

[sub_resource type="Animation" id="7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VisItem/Glimmer/Sprite2:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.25, 0.25)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("VisItem/Glimmer/Sprite3:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.25, 0.25)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("VisItem/Glimmer:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("VisItem/Glow:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("VisItem/Glimmer:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("VisItem/Glimmer:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("VisItem/Glow:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.3, 0.3)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Shape3D:disabled")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("VisItem/Glow:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.745098, 0.745098, 0.745098, 1)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("VisItem/Icons/Icon:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="4"]
resource_name = "init"
length = 0.7
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VisItem/Glimmer/Sprite2:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.5, 0.55),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0.25, 0.25), Vector2(0, 0.3), Vector2(0.3, 0), Vector2(0.25, 0.25)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("VisItem/Glimmer/Sprite3:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4, 0.5, 0.55),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0.25, 0.25), Vector2(0, 0.3), Vector2(0.3, 0), Vector2(0.25, 0.25)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("VisItem/Glimmer:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("VisItem:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(0.5, 2, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -16), Vector2(0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("VisItem/Glimmer:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-180.0, 0.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("VisItem/Glow:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.4, 0.45, 0.5, 0.55),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0.5, 0.5), Vector2(0.5, 0.5), Vector2(0, 0), Vector2(1e-05, 1e-05), Vector2(0.3, 0.3)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Shape3D:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.55),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("VisItem/Glow:modulate:a")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.2, 0.45, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [1.0, 0.3, 0.6, 0.0, 0.0, 1.0]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("VisItem/Icons/Icon:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_12fv6"]
_data = {
"RESET": SubResource("7"),
"init": SubResource("4")
}

[node name="Item" type="Area2D" groups=["ground_item"]]
script = ExtResource("1")

[node name="VisItem" type="Node2D" parent="."]
show_behind_parent = true
z_index = -1

[node name="Glow" type="Sprite2D" parent="VisItem"]
modulate = Color(0.745098, 0.745098, 0.745098, 1)
scale = Vector2(0.3, 0.3)
texture = SubResource("2")

[node name="Glow2" type="Sprite2D" parent="VisItem/Glow"]
show_behind_parent = true
position = Vector2(-1.19209e-07, -48)
scale = Vector2(0.4375, 1.5)
texture = SubResource("8")

[node name="Glimmer" type="Node2D" parent="VisItem"]

[node name="Sprite2" type="Sprite2D" parent="VisItem/Glimmer"]
scale = Vector2(0.25, 0.25)
texture = SubResource("6")

[node name="Sprite3" type="Sprite2D" parent="VisItem/Glimmer"]
rotation = 1.57079
scale = Vector2(0.25, 0.25)
texture = SubResource("6")

[node name="Icons" type="Node2D" parent="VisItem"]

[node name="Icon" type="Sprite2D" parent="VisItem/Icons"]
self_modulate = Color(1, 1, 1, 0.752941)
scale = Vector2(0.75, 0.75)

[node name="Shape3D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("3")
disabled = true

[node name="Anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_12fv6")
}
autoplay = "init"

[node name="HoverRect" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -12.0
offset_top = -10.0
offset_right = 12.0
offset_bottom = 10.0
mouse_default_cursor_shape = 2

[node name="Label" type="Node2D" parent="."]
show_behind_parent = true

[node name="Label" parent="Label" instance=ExtResource("4")]
visible = false
offset_top = -21.0
offset_bottom = -7.0
text = ""

[connection signal="gui_input" from="HoverRect" to="." method="_on_name_gui_input"]
[connection signal="mouse_entered" from="HoverRect" to="." method="_on_HoverRect_mouse_entered"]
[connection signal="mouse_exited" from="HoverRect" to="." method="_on_HoverRect_mouse_exited"]
[connection signal="gui_input" from="Label/Label" to="." method="_on_name_gui_input"]
[connection signal="mouse_exited" from="Label/Label" to="." method="_on_label_mouse_exited"]
